--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c4f69e3601.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@1,1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/st1.css">
-    <link rel="icon" type="image/x-icon" href="../img/p1.png">
+    <link rel="stylesheet" href="css/st1.css">
+    <link rel="icon" type="image/x-icon" href="img/p1.png">
     <title>Tasty Pizza</title>
 </head>
 <body>
