--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c4f69e3601.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@1,1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/st1.css">
-    <link rel="icon" type="image/x-icon" href="/img/p1.png">
+    <link rel="stylesheet" href="st1.css">
+    <link rel="icon" type="image/x-icon" href="img/p1.png">
     <title>Tasty Pizza</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 
 <section class="home">
     <div class="menu__img">
-        <img src="../img/p1.png" alt="" class="one">
+        <img src="img/p1.png" alt="" class="one">
     </div>
 
     <div class="home__text">
@@ -68,20 +68,20 @@
 </section>
 <div class="main">
     <div class="row">
-        <li onclick="mostrarpzz();"><img src="../img/p1.png" onclick="slider('../img/p1.png')"></li>
+        <li onclick="mostrarpzz();"><img src="img/p1.png" onclick="slider('../img/p1.png')"></li>
     </div>
 
     <div class="row row1">
-        <li onclick="mostrarclz();"><img src="../img/p2.png" onclick="slider('../img/p2.png')"></li>
+        <li onclick="mostrarclz();"><img src="p2.png" onclick="slider('../img/p2.png')"></li>
     </div>
 
     <div class="row row2">
-        <li onclick="mostrarpzne();"><img src="../img/p2.png" onclick="slider('../img/p1.png')"></li>
+        <li onclick="mostrarpzne();"><img src="img/p2.png" onclick="slider('../img/p1.png')"></li>
     </div>
 
 </div>
 
-<script src="/js/navbar.js"></script>
-<script src="/js/menu.js"></script>
+<script src="navbar.js"></script>
+<script src="menu.js"></script>
 </body>
 </html>
