--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <section class="home">
     <div class="menu__img">
-        <img src="img/p1.png" alt="" class="one">
+        <img src="p1.png" alt="" class="one">
     </div>
 
     <div class="home__text">
@@ -68,15 +68,15 @@
 </section>
 <div class="main">
     <div class="row">
-        <li onclick="mostrarpzz();"><img src="img/p1.png" onclick="slider('../img/p1.png')"></li>
+        <li onclick="mostrarpzz();"><img src="p1.png" onclick="slider('p1.png')"></li>
     </div>
 
     <div class="row row1">
-        <li onclick="mostrarclz();"><img src="p2.png" onclick="slider('../img/p2.png')"></li>
+        <li onclick="mostrarclz();"><img src="p2.png" onclick="slider('p2.png')"></li>
     </div>
 
     <div class="row row2">
-        <li onclick="mostrarpzne();"><img src="img/p2.png" onclick="slider('../img/p1.png')"></li>
+        <li onclick="mostrarpzne();"><img src="p2.png" onclick="slider('p1.png')"></li>
     </div>
 
 </div>
